--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,31 @@
 }
 
 #img_topo{
+
+    padding: 100px;
     text-align: center;
+}
+
+
+h1::after{
+    content: '|';
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+
+}
+
+@keyframes pisca {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+}
+
+h1{
+    font-family: 'Kodchasan', sans-serif;
 }
 
 
