--- a/css/style.css
+++ b/css/style.css
@@ -4,25 +4,29 @@
 }
 
 .links{
+    
     width: 100%;
     height: 50px;
     position: fixed;
     display: flex;
+    background: rgb(187,84,128);
+    background: linear-gradient(90deg, rgba(187,84,128,1) 0%, rgba(128,16,138,1) 41%);
+    
 }
 
 .links label{
-    padding: 10px o;
+    padding: 19px;
     flex-grow: 1;
     cursor: pointer;
     transition: all .4s;
     text-align: center;
-    @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500;700&display=swap');
+    font-family: 'Nanum Gothic Coding', monospace;
     font-size: 100%;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 .links label:hover{
-    background-color: rgba(255, 255, 255, .2);
+    background-color: rgba(236, 90, 224, 0.2);
 }
 
 .scroll input{
@@ -38,7 +42,8 @@
     display: flex;
 }
 #inicio{
-    background-color:#ebebeb;
+    background: rgb(204,183,214);
+background: linear-gradient(90deg, rgba(204,183,214,1) 0%, rgba(150,111,200,1) 97%);
 }
 
 #sobre{
@@ -103,6 +108,8 @@
 #img_topo{
 
     text-align: center;
+    width: auto;
+    height: auto;
 }
 
 
