--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ animation: colors 15s ease infinite;
 
 .scroll{
     display: flex;
-    
     width: 100vw;
     height: 100vhh;
     overflow: hidden;
@@ -125,9 +124,10 @@ animation: colors 15s ease infinite;
 
 #img_topo{
 
-    text-align: center;
+    position: relative;
     width: auto;
     height: auto;
+    margin-inline: 1000px;
 }
 
 
@@ -140,36 +140,19 @@ h1::after{
 }
 
 
-#img_bh {
-   
-    width: 200px;
-    height: auto;
-    
-
-}
-
-#img_git{
-    position: relative;
-    left: 20%;
-    width: 200px;
-    height: auto;
-
-}
-.sobremim{
-    position: relative;
-    height: 200px;
-    width: 2OOpx;
-    left: -3%;
-    
-}
 .sobremim img {
-    
-    width: 150px;
-    display: inline-block;
+    position: relative;
+    width: 200px;
+    height: -150px;
+    margin-right: 100px;
+ 
 }
 .bloco img{
-    width: 300px;
-    height: auto;
+    position: relative;
+    width: 200px;
+    height: -150px;
+    margin-right: 100px;
+    
 }
 
 
